# body-tracker

./: pyproject.toml
fitsync/: send_to_garmin.py
